--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
       </div>
 
     </div>
-
+     <br>
+    <br>
+    <div id="butt">
+      <button id="btn" onclick="location.reload()">Roll</button>
+    </div> 
   </body>
   <script src="index.js">
   </script>
